--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GraphQL Profile | Vincent Omondi</title>
+  <meta name="description" content="A GraphQL-powered student profile dashboard">
+  <meta name="theme-color" content="#111821">
+  
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  
+  <!-- Styles -->
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/components/login.css">
+  <link rel="stylesheet" href="css/components/profile.css">
+  
   <!-- FontAwesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="glow-container">
   <!-- App Container - This is where all components will be rendered -->
   <div id="app"></div>
   
